--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,15 +1,45 @@
 {% extends './layout.html' %}
 
-{% block title %}Ra’s Sanctuary{% endblock title %}
+{% block title %}Obelisk Card Database{% endblock title %}
 {% block body %}
-<h2>Ra’s Sanctuary</h2>
+<div class="row justify-content-center">
+    <div class="col">
+        <img class="imagotype border-primary-blue" alt="Obelisk The Card Database" src="{{ url_for('static', filename='img/imagotype_original.png') }}" 
+        srcset="{{ url_for('static', filename='img/imagotype_1000dp.png') }} 1000w, {{ url_for('static', filename='img/imagotype_original.png') }} 2000w" 
+        sizes="(max-width: 800px) 1000px, 2000px">
+    </div>
+</div>
 <form id="search" method="post">
-    <input type="text" id="fname" name="fname" value="{{ fname }}">
-    <button type="submit" class="btn btn-primary"> BUSCAR</button>
+    <div class="row mt-4">
+        <div class="input-group justify-content-center">
+            <button id="btn-filter" type="submit" class="btn btn-primary-blue input-group-text m-0 text-light"><i class="bi bi-funnel"></i></button>
+            <input type="text" id="card" class="form-control border-primary-blue" name="card-searched" value="{{ card }}" aria-describedby="button-group" placeholder="Search card..." />
+            <button id="btn-search" type="submit" class="btn btn-primary-blue input-group-text m-0 text-light"><i class="bi bi-search"></i></button>
+        </div>
+    </div>
 </form>
+
 {% if data %}
-{% for card in data.data %}
-        <li>{{ card.name }} : {{ card.id }}</li>
+<form id="select-card" method="post"></form>
+<div class="row justify-content-center pb-4">
+    {% for card in data.data %}
+        <button form="select-card" name="id" class="row mt-3 card-group bg-light g-0 border-primary-blue rounded overflow-hidden position-relative p-2" value="{{card.id}}">
+            <div class="col-auto d-none d-lg-block">
+                <svg class="bd-placeholder-img" width="180" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            </div>
+            <div class="col p-4 d-flex flex-column position-static">
+                <strong class="text-dark card-title">{{ card.name }}</strong>
+                <span class="text-dark mb-4 card-title">
+                {% if card.frameType == "trap" or card.frameType == "spell" %}
+                    {{ card.race }} {{ card.frameType|capitalize }}
+                {% else %}
+                    [{{ card.race }}/{{ card.frameType|capitalize }}]
+                {% endif %}
+                </span>
+                <span id="card-description" class="text-dark-emphasis mb-0 text-pre-wrap">{{ card.desc }}</span>
+            </div>
+        </button>
     {% endfor %}
+</div>
 {% endif %}
 {% endblock body %}
