--- a/app/templates/cardview.html
+++ b/app/templates/cardview.html
@@ -4,11 +4,11 @@
 
 {% block body %}
 <div class="row d-flex justify-content-center align-items-center pt-5">
-    <div class="row bg-light g-0 border-primary-blue rounded overflow-hidden p-2 card-group">
-        <div id="card-image" class="col-auto">
-            <svg class="bd-placeholder-img" width="234" height="338" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+    <div class="row g-0 overflow-hidden card-group">
+        <div id="card-image" class="col-4 d-none d-lg-block mx-2 bg-light border-primary-blue rounded pt-2 pb-2">
+            <img src="data:image/jpg;base64,{{ card.card_image }}" alt="{{card.name}}" width="75%" class="mx-auto d-block">
         </div>
-        <div id="card-data" class="col m-2 text-center">
+        <div id="card-data" class="col text-center bg-light border-primary-blue rounded p-2">
             <div id="card-name" class="card text-white bg-primary-blue m-1">
                 <div class="card-header"><h4 class="fw-bolder">{{card.name}}</h4></div>
             </div>
