--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
     {% for card in data.data %}
         <button form="select-card" name="id" class="row mt-3 card-group bg-light g-0 border-primary-blue rounded overflow-hidden position-relative p-2" value="{{card.id}}">
             <div class="col-auto d-none d-lg-block">
-                <svg class="bd-placeholder-img" width="180" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                <img src="data:image/jpg;base64,{{ card.card_image }}" alt="{{card.name}}" width="180" title="{{card.name}}" class="mx-auto d-block">
             </div>
             <div class="col p-4 d-flex flex-column position-static">
                 <strong class="text-dark card-title">{{ card.name }}</strong>
