Updated not found page with a gif

--- a/app/templates/page_not_found.html
+++ b/app/templates/page_not_found.html
@@ -2,5 +2,12 @@
 
 {% block title %}Página no encontrada{% endblock title %}
 {% block body %}
-<h1>Opsss... ¡La página buscada no existe!</h1>
+<div class="row justify-content-center mt-5">
+    <div class="col-auto text-center bg-light rounded border-primary-blue pb-2">
+        <h1>Not Found</h1>
+        <h4>The page you were looking for could not be found.</h4>
+        <br>
+        <img src="https://media.tenor.com/AdaSVzqCxLIAAAAC/yugioh-anime.gif" width="500px">
+    </div>
+</div>
 {% endblock body %}
